-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.10.0-beta1
-
None
-
23c222f61b260b56c10775197d6100f130d558b4 (qt-creator/qt-creator/master)
Looks like even though "arrow functions" are ECMA6, it is not supported in QJSEngine < Qt 5.12
| For Gerrit Dashboard: QTCREATORBUG-22336 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 263525,2 | Fix C++ Library wizard when compiled with Qt < 5.12 | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |